--- a/products/bookbinding.html
+++ b/products/bookbinding.html
@@ -219,11 +219,11 @@
 					<div class="row">
 						<div class="column width-12">
 							<div class="row content-grid-3 masonry-grid" data-grid-ratio="1.5">
-								<div class="grid-item large">
+								<!--<div class="grid-item large">
 									<div class="thumbnail" data-hover-easing="swing">
 										<iframe src="http://player.vimeo.com/video/95628467?title=0&amp;byline=0&amp;portrait=0&amp;color=fdeb74&amp;loop=1"></iframe>
 									</div>
-								</div>
+								</div>-->
 								<div class="grid-item">
 									<div class="thumbnail" data-hover-easing="swing">
 										<img src="../images/portfolio/classic-collection/mud-landscape-grid-1.jpg" alt=""/>
