--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 								</div>
 								<img data-src="images/slider/slide-3-fs.jpg" data-retina src="images/blank.png" alt=""/>
 							</li>
-							<li class="tms-slide" data-force-fit data-animation="scaleIn">
+							<!--<li class="tms-slide" data-force-fit data-animation="scaleIn">
 								<div class="">
 									<div class="tms-content-inner left v-align-bottom-on-mobile center-on-mobile">
 										<div class="row">
@@ -270,7 +270,7 @@
 									</div>
 								</div>
 								<iframe src="https://player.vimeo.com/video/32679449?autoplay=1&loop=1" width="1250" height="703" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-							</li>
+							</li>-->
 						</ul>
 					</div>
 				</div>
