New Shop Picture
Let’s try this instead

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 											<span class="overlay-info">
 												<span>
 													<span>
-														<span class="project-title"></span>
+														<span class="project-title">SHOP NOW.</span>
 														<span class="project-description">Click here to place your oder</span>
 													</span>
 												</span>
