Mobile Text adjustments
Let’s see that text

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 									stationery products handcrafted to your needs.
 								</h1>
 								<div class="clear"></div>
-								<p class="tms-caption text-medium weight-thin no-margin-bottom font-alt-2 color-white hide-on-mobile"
+								<p class="tms-caption text-medium weight-thin no-margin-bottom font-alt-2 color-white"
 									data-offsety="32"
 									data-animate-in="opacity:0;transY:10px;duration:600ms;easing:swing;delay:700ms;">
 									HANDCRAFTS & DESIGN STUDIO / CAIRO, EGYPT
@@ -215,7 +215,7 @@
 									<div class="tms-content-inner left v-align-bottom-on-mobile center-on-mobile">
 										<div class="row">
 											<div class="column width-5 color-white">
-												<h1 class="tms-caption text-large hide-on-mobile"
+												<h1 class="tms-caption text-large"
 													data-offsetx="0"
 													data-offsety="0"
 													data-animate-in="opacity:0;transY:10px;duration:600ms;easing:swing;"
@@ -241,7 +241,7 @@
 							<li class="tms-slide" data-image data-force-fit data-animation="slideTopBottom">
 								<div class="tms-content">
 									<div class="tms-content-inner center center-on-mobile">
-										<h1 class="tms-caption letter-spaced color-white letter-spaced hide-on-mobile"
+										<h1 class="tms-caption letter-spaced color-white letter-spaced"
 											data-x="center"
 											data-offsety="-30"
 											data-no-scale
