Mobile View Adj
Let’s try this

--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
 								>
 									stationery products handcrafted to your needs.
 								</h1>
+							
+								
 								<div class="clear"></div>
 								<p class="tms-caption text-medium weight-thin no-margin-bottom font-alt-2 color-white"
 									data-offsety="32"
@@ -253,6 +255,14 @@
 										<p class="tms-caption text-medium weight-thin color-white font-alt-2 center no-margin-bottom"
 											data-x="center"
 											data-offsety="30"
+											data-no-scale
+											data-animate-in="opacity:0;transX:20px;duration:600ms;easing:swing;delay:400ms;"
+										>
+											in its modernity and efficiency.
+										</p>
+										<p class="tms-caption text-medium weight-thin color-white font-alt-2 center no-margin-bottom"
+											data-x="center"
+											data-offsety="40"
 											data-no-scale
 											data-animate-in="opacity:0;transX:20px;duration:600ms;easing:swing;delay:400ms;"
 										>
