--- a/products/bookbinding.html
+++ b/products/bookbinding.html
@@ -205,7 +205,7 @@
 								<div class="row">
 									<div class="column width-5 horizon">
 										<h1>CLASSIC COLLECTION.</h1>
-										<p class="font-alt-2 hide-on-mobile">Our first collection of products exploring the handcraft of bookbinding to create sketchbooks, notebooks and more.</p>
+										<p class="font-alt-2 ">Our first collection of products exploring the handcraft of bookbinding to create sketchbooks, notebooks and more.</p>
 									</div>
 								</div>
 							</div>
