--- a/index.html
+++ b/index.html
@@ -200,8 +200,14 @@
 									data-offsety="-12"
 									data-animate-in="opacity:0;transY:-20;duration:600ms;delay:100ms;easing:swing;"
 								>
-									stationery products handcrafted to your needs.
+								handcrafted to your needs.
 								</h1>
+							<h1 class="tms-caption title-medium letter-spaced weight-bold color-white no-margin-bottom"
+								data-offsety="-62"
+								data-animate-in="opacity:0;transY:-20;duration:600ms;delay:100ms;easing:swing;"
+							>
+								stationery products 
+							</h1>
 							
 								
 								<div class="clear"></div>
