--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
 								
 								<div class="clear"></div>
 								<p class="tms-caption text-medium weight-thin no-margin-bottom font-alt-2 color-white"
+									data-offsetx="0"
 									data-offsety="62"
 									data-animate-in="opacity:0;transY:10px;duration:600ms;easing:swing;delay:700ms;">
 									HANDCRAFTS & DESIGN STUDIO / CAIRO, EGYPT
