--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 					<a href="#" class="contains-sub-menu">Products</a>
 					<ul class="sub-menu">
 						<li>
-							<a href="products/bookbinding.html">Bookbinding.</a>
+							<a href="products/classiccollection.html">Classic Collection.</a>
 						</li>
 						<!--<li>
 							<a href="portfolio/nu-clothing.html">With Gallery &amp; Bkg Video</a>
@@ -309,13 +309,13 @@
 								
 								<div class="grid-item design">
 									<div class="thumbnail" data-hover-easing="swing">
-										<a class="overlay-link" href="products/bookbinding.html">
+										<a class="overlay-link" href="products/classiccollection.html">
 											<img src="images/portfolio/grid/classic-fam.jpg" alt=""/>
 											<span class="overlay-info">
 												<span>
 													<span>
-														<span class="project-title">BOOKBINDING.</span>
-														<span class="project-description">Classic Collection</span>
+														<span class="project-title">CLASSIC COLLECTION.</span>
+														<span class="project-description">Sketchbooks</span>
 													</span>
 												</span>
 											</span>
