--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,10 @@
 				<a href="#" class="contains-sub-menu">Products</a>
 				<ul class="sub-menu">
 					<li>
-						<a href="products/bookbinding.html">Bookbinding.</a>
+						<a href="products/classiccollection.html">Classic Collection.</a>
+					</li>
+					<li>
+						<a href="products/prospectuscollection.html">Prospectus Collection.</a>
 					</li>
 					<!--<li>
 						<a href="portfolio/nu-clothing.html">With Gallery &amp; Bkg Video</a>
