--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
 						<li>
 							<a href="products/classiccollection.html">Classic Collection.</a>
 						</li>
+						<li>
+							<a href="products/prospectuscollection.html">Prospectus Collection.</a>
+						</li>
 						<!--<li>
 							<a href="portfolio/nu-clothing.html">With Gallery &amp; Bkg Video</a>
 						</li>
