--- a/products/prospectuscollection.html
+++ b/products/prospectuscollection.html
@@ -8,7 +8,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="Your-Image-Url" />
 	<meta property="og:description" content="Your-Page-Description" />
-	<title>Grain. | Bookbinding</title>
+	<title>Grain. | Prospectus Collection</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/grain-favicon.ico">
 
 	<!-- Font -->
@@ -207,8 +207,8 @@
 							<div class="tmp-content-inner left v-align-bottom color-white">
 								<div class="row">
 									<div class="column width-5 horizon">
-										<h1>CLASSIC COLLECTION.</h1>
-										<p class="font-alt-2 ">Our first collection of products exploring the handcraft of bookbinding to create sketchbooks, notebooks and more.</p>
+										<h1>PROSPECTUS COLLECTION.</h1>
+										<p class="font-alt-2 ">Our second collection of products exploring the handcraft of bookbinding to create sketchbooks, notebooks and more.</p>
 									</div>
 								</div>
 							</div>
