--- a/products/prospectuscollection.html
+++ b/products/prospectuscollection.html
@@ -268,7 +268,7 @@
 				<div class="section-block replicable-content">
 				<div class="section-block featured-media">
 					<div class="thumbnail" data-hover-easing="swing">
-						<a class="overlay-link" href="https://www.facebook.com/grain.studios/shop/">
+						<a class="overlay-link" href="https://www.facebook.com/grainstudio.co/shop/">
 							<img src="../images/shop.jpg" alt=""/>
 								<span class="overlay-info">
 									<span>
