--- a/products/classiccollection.html
+++ b/products/classiccollection.html
@@ -8,7 +8,7 @@
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="Your-Image-Url" />
 	<meta property="og:description" content="Your-Page-Description" />
-	<title>Grain. | Bookbinding</title>
+	<title>Grain. | Classic Collection</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/grain-favicon.ico">
 
 	<!-- Font -->
